examples/kju/positive/functions/return_from_unit_function.kju
fun f():Unit{
	return;
}

fun kju():Unit{
	f();
}