examples/kju/negative/returnChecker/int_function_without_return.kju
fun f():Int{
}

fun kju():Unit{
	f();
}